# ql-jax

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  additional_gaps_implementation.md  demo.md  final_gaps_analysis.md  gap_implementation.md  more_gaps_implementation.md  project.md  pyproject.toml  validation.md  validation_gaps.md  validation_plan.md
benchmarks/: README.md  __init__.py  bench_analytic.py  bench_greeks.py  runner.py
examples/: README.md  asian_option.py  bonds.py  callable_bonds.py  cds.py  cva_irs.py  discrete_hedging.py  equity_option.py  fitted_bond_curve.py  fra.py  gpu_benchmark.py  heston_calibration.py  portfolio_greeks.py  variance_swap.py
notebooks/: 00_index.ipynb  01_dates_calendars.ipynb  02_yield_curves.ipynb  03_bonds_fra.ipynb  04_interest_rate_swaps.ipynb  05_european_options.ipynb  06_european_greeks_hessians.ipynb  07_american_options.ipynb  08_caps_floors.ipynb  09_swaptions.ipynb  10_asian_options.ipynb  11_barrier_options.ipynb  12_lookback_cliquet.ipynb  13_basket_options.ipynb  14_swing_options.ipynb  15_callable_bonds.ipynb  16_convertible_bonds.ipynb  17_bond_forwards.ipynb  18_fitted_curves.ipynb  19_cds.ipynb  20_cds_greeks.ipynb  21_risky_bonds_cva.ipynb  22_portfolio_credit.ipynb  23_hull_white.ipynb  24_heston.ipynb  25_slv.ipynb  26_lmm.ipynb  27_vectorized_portfolio.ipynb  28_jit_deep_dive.ipynb  29_cpu_gpu_scaling.ipynb  30_first_order_greeks.ipynb  31_second_order_greeks.ipynb  32_ad_through_calibration.ipynb  33_math_toolkit.ipynb  README.md  _common.py
ql_jax/: __init__.py  settings.py
(+512 files in other folders)
